--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/brand/brands.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/brand/brands.html
@@ -17,7 +17,7 @@
         </a>
     </div>
 
-    <div th:replace="~{fragments/fragments :: search_form_and_message('/brands/page/1')}"></div>
+    <div th:replace="~{fragments/fragments :: search_form_and_message()}"></div>
 
     <div class="full-details">
         <table
@@ -25,10 +25,10 @@
             <thead class="thead-dark">
             <tr>
                 <th class="hideable-column">
-                <th th:replace="~{fragments/fragments :: tablehead_link('id', 'Brand ID', 'tag', 'brands')}"></th>
+                <th th:replace="~{fragments/fragments :: tablehead_link('id', 'Brand ID', 'tag')}"></th>
                 <th>Logo</th>
-                <th th:replace="~{fragments/fragments :: tablehead_link('name', 'Brand Name', 'none', 'brands')}"></th>
-                <th th:replace="~{fragments/fragments :: tablehead_link('categories', 'Categories', 'none', 'brands')}"></th>
+                <th th:replace="~{fragments/fragments :: tablehead_link('name', 'Brand Name', 'none')}"></th>
+                <th th:replace="~{fragments/fragments :: tablehead_link('categories', 'Categories', 'none')}"></th>
                 <th></th>
             </tr>
             </thead>
@@ -50,7 +50,7 @@
 
 
                 <td style="width: 150px;">
-                    <div th:replace="~{fragments/fragments :: edit_delete_fn('brands',${brand.id})}"></div>
+                    <div th:replace="~{fragments/fragments :: edit_delete_fn(${brand.id})}"></div>
                 </td>
 
 
@@ -70,13 +70,13 @@
                 <div>[[${brand.name}]]</div>
             </div>
             <div class="mt-2">
-                <div th:replace="~{fragments/fragments :: edit_delete_fn('brands',${brand.id})}"></div>
+                <div th:replace="~{fragments/fragments :: edit_delete_fn(${brand.id})}"></div>
             </div>
             <div>&nbsp;</div>
         </div>
     </div>
 
-    <div th:replace="~{fragments/fragments :: pagination('brands', ${totalPages}, ${currentPage}, ${totalItems}, ${startCount}, ${endCount})}"></div>
+    <div th:replace="~{fragments/fragments :: pagination(${totalPages}, ${currentPage}, ${totalItems}, ${startCount}, ${endCount})}"></div>
 
 
     <div th:replace="~{fragments/modal :: modal_dialog}"></div>
