--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/products/product_form.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/products/product_form.html
@@ -51,27 +51,47 @@
                 </div>
 
                 <div class="tab-pane drop" id="description" role="tabpanel" aria-labelledby="description-tab">
-                    <th:block sec:authorize="hasAuthority('Salesperson')">
-                        <div th:replace="~{products/readonly/product_description_readonly :: content}"></div>
+
+                    <th:block
+                            sec:authorize="${!#authorization.expression('hasAuthority(''Admin'')') && !#authorization.expression('hasAuthority(''Editor'')')}">
+                        <th:block sec:authorize="${#authorization.expression('hasAuthority(''Salesperson'')')}">
+                            <div th:replace="~{products/readonly/product_description_readonly :: content}"></div>
+                        </th:block>
                     </th:block>
-                    <th:block sec:authorize="hasAnyAuthority('Admin', 'Editor')">
+
+                    <th:block
+                            sec:authorize="${#authorization.expression('hasAuthority(''Admin'')') || #authorization.expression('hasAuthority(''Editor'')')}">
                         <div th:replace="~{products/product_description :: content}"></div>
                     </th:block>
+
                 </div>
 
                 <div class="tab-pane drop" id="images" role="tabpanel" aria-labelledby="images-tab">
-                    <th:block sec:authorize="hasAnyAuthority('Admin', 'Editor')">
-                        <div th:replace="~{products/product_images :: content}"></div>
+
+                    <th:block
+                            sec:authorize="${!#authorization.expression('hasAuthority(''Admin'')') && !#authorization.expression('hasAuthority(''Editor'')')}">
+                        <th:block sec:authorize="${#authorization.expression('hasAuthority(''Salesperson'')')}">
+                            <div th:replace="~{products/readonly/product_images_readonly :: content}"></div>
+                        </th:block>
                     </th:block>
-                    <th:block sec:authorize="hasAuthority('Salesperson')">
-                        <div th:replace="~{products/readonly/product_images_readonly :: content}"></div>
+
+
+                    <th:block
+                            sec:authorize="${#authorization.expression('hasAuthority(''Admin'')') || #authorization.expression('hasAuthority(''Editor'')')}">
+                        <div th:replace="~{products/product_images :: content}"></div>
                     </th:block>
                 </div>
 
                 <div class="tab-pane drop" id="details" role="tabpanel" aria-labelledby="details-tab">
-                    <th:block sec:authorize="hasAuthority('Salesperson')">
-                        <div th:replace="~{products/readonly/product_details_readonly :: content}"></div>
+
+                    <th:block
+                            sec:authorize="${!#authorization.expression('hasAuthority(''Admin'')') && !#authorization.expression('hasAuthority(''Editor'')')}">
+                        <th:block sec:authorize="${#authorization.expression('hasAuthority(''Salesperson'')')}">
+                            <div th:replace="~{products/readonly/product_details_readonly :: content}"></div>
+                        </th:block>
                     </th:block>
+
+
                     <th:block sec:authorize="hasAnyAuthority('Admin', 'Editor')">
                         <div th:replace="~{products/product_details :: content}"></div>
                         <div>
@@ -82,9 +102,15 @@
                 </div>
 
                 <div class="tab-pane drop" id="shipping" role="tabpanel" aria-labelledby="shipping-tab">
-                    <th:block sec:authorize="hasAuthority('Salesperson')">
-                        <div th:replace="~{products/readonly/product_shipping_readonly :: content}"></div>
+
+                    <th:block
+                            sec:authorize="${!#authorization.expression('hasAuthority(''Admin'')') && !#authorization.expression('hasAuthority(''Editor'')')}">
+                        <th:block sec:authorize="${#authorization.expression('hasAuthority(''Salesperson'')')}">
+                            <div th:replace="~{products/readonly/product_shipping_readonly :: content}"></div>
+                        </th:block>
                     </th:block>
+
+
                     <th:block sec:authorize="hasAnyAuthority('Admin', 'Editor')">
                         <div th:replace="~{products/product_shipping :: content}"></div>
                     </th:block>
