--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/products/product_overview.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/products/product_overview.html
@@ -16,7 +16,7 @@
         <label class="col-sm-2 col-form-label">Product Name:</label>
         <div class="col-sm-10">
             <input type="text" class="form-control" th:field="*{name}"
-                   th:readonly="${#authorization.expression('hasAuthority(''Salesperson'')')}"
+                   th:readonly="${#authorization.expression('hasAuthority(''Salesperson'')') && !#authorization.expression('hasAuthority(''Admin'')') && !#authorization.expression('hasAuthority(''Editor'')')}"
                    required minlength="3" maxlength="256"
                    id="nameInput"/>
         </div>
@@ -26,7 +26,7 @@
         <label class="col-sm-2 col-form-label">Alias:</label>
         <div class="col-sm-10">
             <input type="text" placeholder="Default is product name( spaces are replaced by dashes)"
-                   th:readonly="${#authorization.expression('hasAuthority(''Salesperson'')')}"
+                   th:readonly="${#authorization.expression('hasAuthority(''Salesperson'')') && !#authorization.expression('hasAuthority(''Admin'')') && !#authorization.expression('hasAuthority(''Editor'')')}"
                    class="form-control"
                    th:field="*{alias}"
                    required minlength="3" maxlength="45"/>
@@ -43,9 +43,14 @@
                     </th:block>
                 </select>
             </th:block>
-            <th:block sec:authorize="hasAuthority('Salesperson')">
-                <input type="text" th:value="${product.brand.name}" class="form-control" readonly/>
+
+            <th:block
+                    sec:authorize="${!#authorization.expression('hasAuthority(''Admin'')') && !#authorization.expression('hasAuthority(''Editor'')')}">
+                <th:block sec:authorize="${#authorization.expression('hasAuthority(''Salesperson'')')}">
+                    <input type="text" th:value="${product.brand.name}" class="form-control" readonly/>
+                </th:block>
             </th:block>
+
         </div>
     </div>
 
@@ -66,9 +71,14 @@
                     </select>
                 </th:block>
             </th:block>
-            <th:block sec:authorize="hasAuthority('Salesperson')">
-                <input type="text" th:value="${product.category.name}" class="form-control" readonly/>
+
+            <th:block
+                    sec:authorize="${!#authorization.expression('hasAuthority(''Admin'')') && !#authorization.expression('hasAuthority(''Editor'')')}">
+                <th:block sec:authorize="${#authorization.expression('hasAuthority(''Salesperson'')')}">
+                    <input type="text" th:value="${product.category.name}" class="form-control" readonly/>
+                </th:block>
             </th:block>
+
         </div>
     </div>
 
@@ -76,7 +86,7 @@
         <label class="col-sm-2 col-form-label">Enabled: </label>
         <div class="col-sm-10">
             <input type="checkbox"
-                   th:disabled="${#authorization.expression('hasAuthority(''Salesperson'')')}"
+                   th:disabled="${#authorization.expression('hasAuthority(''Salesperson'')') && !#authorization.expression('hasAuthority(''Admin'')') && !#authorization.expression('hasAuthority(''Editor'')')}"
                    th:field="*{enabled}" required/>
         </div>
     </div>
@@ -85,7 +95,7 @@
         <label class="col-sm-2 col-form-label">In-Stock: </label>
         <div class="col-sm-10">
             <input type="checkbox"
-                   th:disabled="${#authorization.expression('hasAuthority(''Salesperson'')')}"
+                   th:disabled="${#authorization.expression('hasAuthority(''Salesperson'')') && !#authorization.expression('hasAuthority(''Admin'')') && !#authorization.expression('hasAuthority(''Editor'')')}"
                    th:field="*{inStock}" required/>
         </div>
     </div>
