--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments/fragments.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments/fragments.html
@@ -28,13 +28,13 @@
 <body>
 
 <a th:fragment="pagination_link(page, text)" class="page-link"
-   th:href="@{'/'+${moduleURL}+'/page/'+${page} +'?sortField='+${sortField}+'&sortDir=' +${sortDir} +${(keyword!=null) ? '&keyword='+keyword : ''} +${categoryId !=null ? '&categoryId='+categoryId : ''}  }">
+   th:href="@{${moduleURL}+'/page/'+${page} +'?sortField='+${sortField}+'&sortDir=' +${sortDir} +${(keyword!=null) ? '&keyword='+keyword : ''} +${categoryId !=null ? '&categoryId='+categoryId : ''}  }">
     [[${text}]]</a>
 
 <th th:fragment="tablehead_link(fieldName, columnLabel, removeTag)" th:remove="${removeTag}">
 
     <a
-            th:href="@{'/'+${moduleURL}+'/page/' + ${currentPage} + '?sortField='+${fieldName}+'&sortDir=' +${(sortField != fieldName ? sortDir : reverseSortDir)} +${(keyword!=null) ? '&keyword='+keyword : ''} }"
+            th:href="@{${moduleURL}+'/page/' + ${currentPage} + '?sortField='+${fieldName}+'&sortDir=' +${(sortField != fieldName ? sortDir : reverseSortDir)} +${(keyword!=null) ? '&keyword='+keyword : ''} }"
             class="cursor-hand text-white">[[${columnLabel}]]</a>
     <span th:if="${sortField == fieldName}"
           th:class="${sortDir == 'asc' ? 'fas fa-sort-up' : 'fas fa-sort-down' }"
@@ -55,50 +55,50 @@
 </div>
 
 <div th:fragment="edit_delete_fn(Id)">
-    <a class="cursor-hand" th:href="@{'/'+${moduleURL}+'/edit/'+${Id} }">
+    <a class="cursor-hand" th:href="@{${moduleURL}+'/edit/'+${Id} }">
         <i class="fas fa-edit fa-2x icon-green"></i></a> &nbsp;
-    <a th:href="@{'/'+${moduleURL}+'/delete/'+${Id} }"
+    <a th:href="@{${moduleURL}+'/delete/'+${Id} }"
        class="cursor-hand link-delete">
         <i class="fas fa-trash fa-2x icon-dark"> </i></a>
 </div>
 
 <div th:fragment="delete_fn(Id)">
-    <a th:href="@{'/'+${moduleURL}+'/delete/'+${Id} }"
+    <a th:href="@{${moduleURL}+'/delete/'+${Id} }"
        class="cursor-hand link-delete">
         <i class="fas fa-trash fa-2x icon-dark"> </i></a>
 </div>
 
 <div th:fragment="edit_fn(Id)">
-    <a class="cursor-hand" th:href="@{'/'+${moduleURL}+'/edit/'+${Id} }">
+    <a class="cursor-hand" th:href="@{${moduleURL}+'/edit/'+${Id} }">
         <i class="fas fa-edit fa-2x icon-green"></i></a> &nbsp;
 </div>
 
 <div th:fragment="detail_fn(Id)">
     <a class="cursor-hand link-details"
-       th:href="@{'/'+${moduleURL}+'/detail/'+${Id}}">
+       th:href="@{${moduleURL}+'/detail/'+${Id}}">
         <i class="fas fa-file-alt fa-2x icon-green"></i>
     </a>&nbsp;
 </div>
 
 <div th:fragment="detail_edit_delete_fn(Id)">
     <a class="cursor-hand link-details"
-       th:href="@{'/'+${moduleURL}+'/detail/'+${Id}}">
+       th:href="@{${moduleURL}+'/detail/'+${Id}}">
         <i class="fas fa-file-alt fa-2x icon-green"></i>
     </a>&nbsp;
     <a class="cursor-hand" th:href="@{'/'+${moduleURL}+'/edit/'+${Id} }">
         <i class="fas fa-edit fa-2x icon-green"></i></a> &nbsp;
-    <a th:href="@{'/'+${moduleURL}+'/delete/'+${Id} }"
+    <a th:href="@{${moduleURL}+'/delete/'+${Id} }"
        class="cursor-hand link-delete">
         <i class="fas fa-trash fa-2x icon-dark"> </i></a>
 </div>
 
 <div th:fragment="status(status, routingPass, id)">
     <a th:if="${status == true}" class="cursor-hand"
-       th:href="@{'/'+${moduleURL}+'/'+${routingPass}+'/'+${id}+'/false'}"> <i
+       th:href="@{${moduleURL}+'/'+${routingPass}+'/'+${id}+'/false'}"> <i
             class="fas fa-check-circle fa-2x icon-green"></i></a>
     <a
             th:if="${status == false}"
-            th:href="@{'/'+${moduleURL}+'/'+${routingPass}+'/'+${id}+'/true'}"
+            th:href="@{${moduleURL}+'/'+${routingPass}+'/'+${id}+'/true'}"
             class="cursor-hand"> <i class="fas fa-circle fa-2x icon-dark"></i>
     </a>
 </div>
@@ -120,12 +120,12 @@
 
 <div th:fragment="pagination(totalPages, currentPage, totalItems, startCount, endCount)">
     <div class="text-center m-1" th:if="${totalItems > 0}">
-			<span>Showing [[${#strings.capitalize(moduleURL)}]] # [[${startCount}]] to [[${endCount}]] of
+			<span>Showing [[${#strings.capitalize(contextDisplay)}]] # [[${startCount}]] to [[${endCount}]] of
 				[[${totalItems}]]</span>
     </div>
 
     <div class="text-center m-1" th:if="${totalItems == 0}">
-        <span>No [[${moduleURL}]] found</span>
+        <span>No [[${contextDisplay}]] found</span>
     </div>
 
     <div th:if="${totalPages > 0}">
