--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/login.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/login.html
@@ -6,7 +6,8 @@
     <div><h2>Customer Login</h2></div>
 
     <div>
-        <img th:src="@{/images/ShopmeAdminSmall.png}" alt="">
+<!--        <img th:src="@{/images/ShopmeAdminSmall.png}" alt="">-->
+        <h2>Customer Login</h2>
     </div>
 
     <form th:action="@{/login}" method="post" style="max-width: 350px; margin: 0 auto;">
