--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/navigation.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/navigation.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
->
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <body>
 <div th:fragment="header_menu">
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
@@ -29,7 +29,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a href="" class="nav-link">Login</a>
+                    <a th:href="@{/login}" class="nav-link">Login</a>
                 </li>
 
                 <li class="nav-item">
@@ -85,6 +85,13 @@
 
 <div th:fragment="search_nav">
     <div class="col-md">
+
+        <th:block sec:authorize="isAuthenticated()">
+            <form th:action="@{/logout}" method="post" th:hidden="true" name="logoutForm">
+                <input type="submit" value="Logout">
+            </form>
+        </th:block>
+
         <nav class="navbar navbar-expand-sm bg-light">
             <div class="collapse navbar-collapse" id="searchNavBar">
                 <form class="form-inline" th:action="@{/search}">
@@ -93,7 +100,27 @@
                     <input type="submit" class="btn btn-outline-success" value="Search"/>
                 </form>
             </div>
+
+            <ul class="navbar-nav">
+                <th:block sec:authorize="isAuthenticated()">
+                    <li class="nav-item">
+                        <b><a class="nav-link" th:href="@{/customer}" sec:authentication="principal.fullname"></a></b>
+                    </li>
+
+                    <li class="nav-item"><a class="nav-link" th:href="@{/address}">Addresses</a></li>
+                    <li class="nav-item"><a class="nav-link" th:href="@{/questions}">Questions</a></li>
+                    <li class="nav-item"><a class="nav-link" th:href="@{/reviews}">Reviews</a></li>
+                    <li class="nav-item"><a class="nav-link" th:href="@{/orders}">Orders</a></li>
+                    <li class="nav-item"><a class="nav-link" th:href="@{/cart}">Cart</a></li>
+                    <li class="nav-item">
+                        <b> <a class="nav-link" href="javascript: document.logoutForm.submit()">Logout</a></b>
+                    </li>
+                </th:block>
+            </ul>
+
         </nav>
+
+
     </div>
 </div>
 
