--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/fragments.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/fragments.html
@@ -12,6 +12,23 @@
     <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
     <script type="text/javascript"
             th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+
+    <link rel="stylesheet" type="text/css"
+          th:href="@{/webjars/font-awesome/5.15.1/css/all.min.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/styles/style.css}"/>
+    <script type="text/javascript"
+            th:src="@{/webjars/font-awesome/5.15.1/js/all.min.js}"></script>
+    <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
+    <script type="text/javascript"
+            th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+    <script type="text/javascript"
+            th:src="@{/js/common.js}"></script>
+    <link rel="stylesheet" th:href="@{/styles/rte_theme_default.css}">
+    <script type="text/javascript" th:src="@{/js/all_plugins.js}"></script>
+    <script type="text/javascript" th:src="@{/js/rte.js}"></script>
+
+
+
 </head>
 
 <body>
