--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/login.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/login.html
@@ -14,6 +14,12 @@
             <i class="fab fa-google mr-2"></i>
             Continue with Google</a>
     </div>
+    <div class="mt-3">
+        <a th:href="@{/oauth2/authorization/facebook}"
+           class="btn btn-lg btn-secondary">
+            <i class="fab fa-facebook mr-2"></i>
+            Continue with Facebook</a>
+    </div>
     <div>&nbsp;</div>
 
     <form th:action="@{/login}" method="post" style="max-width: 350px; margin: 0 auto;">
