FrontEnd Module(Updating Customer Details): Implementation of the Forgot User password 1. Bug: Even Users that didn't Use the DB Authentication Type can chage thier passwords which is not supposed to be so.

--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/register/register_form.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/register/register_form.html
@@ -71,6 +71,7 @@
                            id="confirmPassword"
                            class="form-control"
                            required
+                           oninput="checkPasswordMatch(document.getElementById('password'))"
                            maxlength="64">
                 </div>
             </div>
