--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/login.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/login.html
@@ -50,6 +50,10 @@
         </div>
 
         <div>&nbsp;</div>
+        <div>&nbsp;</div>
+        <div>
+            or <a th:href="@{/forgot_password}">Forgot Password</a>
+        </div>
         <div>
             Don't have an account yet? <a th:href="@{/register}">Sign Up.</a>
         </div>
