--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/fragments/modal.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/fragments/modal.html
@@ -16,8 +16,7 @@
             </div>
 
             <div class="modal-footer">
-                <a class="btn btn-success confirm-dialog" style="color: white;">Yes</a>
-                <button type="button" class="btn btn-danger" data-dismiss="modal">No</button>
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
             </div>
 
         </div>
