--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/product/product_detail.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/product/product_detail.html
@@ -55,9 +55,8 @@
                 <span th:if="${product.inStock}" class="text-success"><b>In Stock</b></span>
                 <span th:if="${!product.inStock}" class="text-danger"><b>Out of Stock</b></span>
             </div>
-            <div class="mt-2">
-                <input type="text" size="5" value="1">
-            </div>
+            <div th:replace="~{cart/quantity_control :: quantity_control(1, ${product.id})}"></div>
+
             <div class="mt-2">
                 <input type="button" value="Add to Cart" class="btn btn-primary">
             </div>
@@ -94,6 +93,7 @@
         </div>
     </div>
 
+    <div th:replace="~{fragments/modal :: modal_dialog}"></div>
     <div th:replace="~{product/images_carousel :: content}"></div>
     <div th:replace="~{navigation :: footer_menu}"></div>
 
@@ -116,6 +116,9 @@
             })
         });
     </script>
+
+    <script th:src="@{/js/quantity_control.js}"></script>
+    <script th:src="@{/js/common.js}"></script>
 
     <style>
         @media (min-width: 768px) {
