--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/products/product_overview.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/products/product_overview.html
@@ -87,7 +87,7 @@
         <div class="col-sm-10">
             <input type="checkbox"
                    th:disabled="${#authorization.expression('hasAuthority(''Salesperson'')') && !#authorization.expression('hasAuthority(''Admin'')') && !#authorization.expression('hasAuthority(''Editor'')')}"
-                   th:field="*{enabled}" required/>
+                   th:field="*{enabled}"/>
         </div>
     </div>
 
@@ -96,7 +96,7 @@
         <div class="col-sm-10">
             <input type="checkbox"
                    th:disabled="${#authorization.expression('hasAuthority(''Salesperson'')') && !#authorization.expression('hasAuthority(''Admin'')') && !#authorization.expression('hasAuthority(''Editor'')')}"
-                   th:field="*{inStock}" required/>
+                   th:field="*{inStock}"/>
         </div>
     </div>
 
