--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/product/product_detail.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/product/product_detail.html
@@ -55,11 +55,16 @@
                 <span th:if="${product.inStock}" class="text-success"><b>In Stock</b></span>
                 <span th:if="${!product.inStock}" class="text-danger"><b>Out of Stock</b></span>
             </div>
-            <div th:replace="~{cart/quantity_control :: quantity_control(1, ${product.id})}"></div>
 
-            <div class="mt-2">
-                <input type="button" value="Add to Cart" class="btn btn-primary">
-            </div>
+            <th:block th:if="${product.inStock}">
+                <div th:replace="~{cart/quantity_control :: quantity_control(1, ${product.id})}"></div>
+                <div class="mt-2">
+                    <input type="button"
+                           id="buttonAdd2Cart"
+                           value="Add to Cart"
+                           class="btn btn-primary">
+                </div>
+            </th:block>
         </div>
 
     </div>
@@ -98,6 +103,10 @@
     <div th:replace="~{navigation :: footer_menu}"></div>
 
     <script type="text/javascript">
+        contextPath="[[@{/}]]";
+        productId="[[${product.id}]]";
+        csrfHeaderName = "[[${_csrf.headerName}]]";
+        csrfValue = "[[${_csrf.token}]]";
         $(document).ready(function () {
             let bigImage = $("#bigImage");
             $(".image-thumbnail").mouseover(function () {
@@ -118,6 +127,7 @@
     </script>
 
     <script th:src="@{/js/quantity_control.js}"></script>
+    <script th:src="@{/js/add_to_cart.js}"></script>
     <script th:src="@{/js/common.js}"></script>
 
     <style>
