--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/navigation.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/navigation.html
@@ -111,7 +111,9 @@
                     <li class="nav-item"><a class="nav-link" th:href="@{/questions}">Questions</a></li>
                     <li class="nav-item"><a class="nav-link" th:href="@{/reviews}">Reviews</a></li>
                     <li class="nav-item"><a class="nav-link" th:href="@{/orders}">Orders</a></li>
-                    <li class="nav-item"><a class="nav-link" th:href="@{/cart}">Cart</a></li>
+                    <li class="nav-item"><a class="nav-link" th:href="@{/cart}">
+                        <i class="fas fa-shopping-cart fa-2x"></i>
+                    </a></li>
                     <li class="nav-item">
                         <b> <a class="nav-link" href="javascript: document.logoutForm.submit()">Logout</a></b>
                     </li>
