--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/cart/shopping_cart.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/cart/shopping_cart.html
@@ -43,7 +43,7 @@
 
                         <div>
                             <span>=&nbsp;</span>
-                            <div th:replace="~{product/product_fragment :: showPricing(${item.subtotal}, 'h4')}"></div>
+                            <div th:replace="~{product/product_fragment :: showPricing(${item.subtotal}, 'h4', 'subtotal'+${product.id})}"></div>
                         </div>
 
                     </div>
@@ -58,7 +58,7 @@
             </div>
             <div>
                 <span>=&nbsp;</span>
-                <div th:replace="~{product/product_fragment :: showPricing(${estimatedTotal}, 'h3')}"></div>
+                <div th:replace="~{product/product_fragment :: showPricing(${estimatedTotal}, 'h3', 'estimatedTotal')}"></div>
             </div>
             <div class="mt-2">
                 <button class="btn btn-danger">Check Out</button>
@@ -71,7 +71,15 @@
     </div>
 
     <div th:replace="~{navigation :: footer_menu}"></div>
+    <div th:replace="~{fragments/modal :: modal_dialog}"></div>
 
 </div>
+<script type="text/javascript" th:src="@{/js/shopping_cart.js}"></script>
+<script type="text/javascript" th:src="@{/js/common.js}"></script>
+<script type="text/javascript">
+    contextPath="[[@{/}]]";
+    csrfHeaderName = "[[${_csrf.headerName}]]";
+    csrfValue = "[[${_csrf.token}]]";
+</script>
 </body>
 </html>
