--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/fragments.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/fragments.html
@@ -9,6 +9,8 @@
     <title>[[${title}]] - [[${SITE_NAME}]]</title>
     <link rel="stylesheet" type="text/css"
           th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" type="text/css"
+          th:href="@{/styles/style.css}"/>
     <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
     <script type="text/javascript"
             th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
