ShopmeBackEnd(ShippingRate Module). 1. Development of Controller, Service, Repository, Entities 2. Development of Views

--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments/navigation.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments/navigation.html
@@ -75,7 +75,7 @@
                                         th:href="@{/customers}" sec:authorize="hasAnyAuthority('Admin','Salesperson')">Customers</a>
                 </li>
                 <li class="nav-item"><a class="nav-link"
-                                        th:href="@{/Shipping}" sec:authorize="hasAnyAuthority('Admin','Salesperson')">Shipping</a>
+                                        th:href="@{/shipping_rates}" sec:authorize="hasAnyAuthority('Admin','Salesperson')">Shipping</a>
                 </li>
                 <li class="nav-item"><a class="nav-link" th:href="@{/report}"
                                         sec:authorize="hasAnyAuthority('Admin','Salesperson')">Sales
