ShopmeFrontEnd(AddressBook Module). 1. Development of Controller, Service, Repository, Entities 2. Development of Views 3. Correction of Javascript

--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/navigation.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/navigation.html
@@ -107,7 +107,7 @@
                         <b><a class="nav-link" th:href="@{/customer}" sec:authentication="principal.fullname"></a></b>
                     </li>
 
-                    <li class="nav-item"><a class="nav-link" th:href="@{/address}">Addresses</a></li>
+                    <li class="nav-item"><a class="nav-link" th:href="@{/address_book}">Address Book</a></li>
                     <li class="nav-item"><a class="nav-link" th:href="@{/questions}">Questions</a></li>
                     <li class="nav-item"><a class="nav-link" th:href="@{/reviews}">Reviews</a></li>
                     <li class="nav-item"><a class="nav-link" th:href="@{/orders}">Orders</a></li>
