General Module 1. Clean up of clashes

--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/customers/customer_form.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/customers/customer_form.html
@@ -85,7 +85,7 @@
                     <label class="col-sm-4 col-form-label">Address Line 1:</label>
                     <div class="col-sm-8">
                         <input type="text" class="form-control"
-                               th:field="*{addressLineOne}"
+                               th:field="*{addressLine1}"
                                required
                                maxlength="64" minlength="2">
                     </div>
@@ -97,7 +97,7 @@
                     <label class="col-sm-4 col-form-label">Address Line 2:</label>
                     <div class="col-sm-8">
                         <input type="text" class="form-control"
-                               th:field="*{addressLineTwo}"
+                               th:field="*{addressLine2}"
                                maxlength="64" minlength="2">
                     </div>
                 </div>
