--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments/fragments.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments/fragments.html
@@ -100,7 +100,7 @@
        th:href="@{${moduleURL}+'/detail/'+${Id}}">
         <i class="fas fa-file-alt fa-2x icon-green"></i>
     </a>&nbsp;
-    <a class="cursor-hand" th:href="@{'/'+${moduleURL}+'/edit/'+${Id} }">
+    <a class="cursor-hand" th:href="@{${moduleURL}+'/edit/'+${Id} }">
         <i class="fas fa-edit fa-2x icon-green"></i></a> &nbsp;
     <a th:href="@{${moduleURL}+'/delete/'+${Id} }"
        class="cursor-hand link-delete">
