--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/customers/customer_detail_modal.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/customers/customer_detail_modal.html
@@ -73,14 +73,14 @@
                 <div class="form-group row">
                     <label class="col-sm-2 col-form-label">Address Line 1: </label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" th:value="${customer.addressLineOne}" readonly/>
+                        <input type="text" class="form-control" th:value="${customer.getAddressLine1()}" readonly/>
                     </div>
                 </div>
 
                 <div class="form-group row">
                     <label class="col-sm-2 col-form-label">Address Line 2: </label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" th:value="${customer.addressLineTwo}" readonly/>
+                        <input type="text" class="form-control" th:value="${customer.getAddressLine2()}" readonly/>
                     </div>
                 </div>
 
