--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/customer/customer.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/customer/customer.html
@@ -99,7 +99,7 @@
                 <label class="col-sm-4 col-form-label">Address Line 1:</label>
                 <div class="col-sm-8">
                     <input type="text" class="form-control"
-                           th:field="*{addressLineOne}"
+                           th:field="*{addressLine1}"
                            required
                            maxlength="64" minlength="2">
                 </div>
@@ -111,7 +111,7 @@
                 <label class="col-sm-4 col-form-label">Address Line 2:</label>
                 <div class="col-sm-8">
                     <input type="text" class="form-control"
-                           th:field="*{addressLineTwo}"
+                           th:field="*{addressLine2}"
                            maxlength="64" minlength="2">
                 </div>
             </div>
